added typewriter and fix some of my home page ui

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -3,7 +3,7 @@
 /* General Footer Styling */
 footer {
     padding: 20px;
-    background-color: #f1f1f1; /* Adjust the color as needed */
+    background-color: #f1f1f1; 
     text-align: center;
     width: 100%;
     margin-top: 40px;
@@ -13,7 +13,7 @@ footer {
   .footer {
     background-color: #343e47;
     width: 100%;
-    color: white; /* Default text color */
+    color: white; 
   }
   
   /* Footer Content */
