--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -55,7 +55,7 @@
   display: block;
   width: 25px;
   height: 3px;
-  background-color: #2b4d8b;
+  background-color: #0047AB;
   margin: 5px 0;
   transition: 0.3s;
 }
